--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
-                        <p>Want to get in touch? Fill out the form below to send me a message and I will get back to you as soon as possible!</p>
+                        <p>Reach out </p>
                         <ul>
                             <li>Cell: 406-000-0000</li>
                             <li>Email: connor.merritt@umt.edu</li>
