--- a/proj.html
+++ b/proj.html
@@ -51,9 +51,10 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
-                        <p>stuff about me</p>
-                        <img class="img-fluid" src="assets/img/post-sample-image.jpg" alt="..." />
-                        <p>more stuff about me</p>
+                        <p>NFTRees</p>
+                        <p>NFTrees was a project I worked on for my CSCI258 course. It is an online store complete with a database for storing orders and a payment system.</p>
+                        <img class="img-fluid" src="assets/img/nftrees.png" alt="..." />
+                        <p>I primarily focused on setting up the payment system through Stripe, which required me to implement the API code in the Django project using Python script.</p>
                     </div>
                 </div>
             </div>
